GitLab/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: shryu1/test:latest
    name: nginx
    ports:
    - containerPort: 80
  imagePullSecrets:
  - name: shryu
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx-svc
  namespace: default
spec:
  ports:
  - nodePort: 31000
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  type: NodePort
